<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    tools:context=".view.DetailsFragment">

    <ImageView
        android:id="@+id/detail_film_poster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_image_height"
        android:contentDescription="@string/movie_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/movie" />

    <TextView
        android:id="@+id/tv_details_film_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha=".7"
        android:background="@android:color/darker_gray"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="4dp"
        android:text="@string/text_movie"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_film_poster" />

    <TextView
        android:id="@+id/tv_detail_film_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detail_item_margin"
        android:text="@string/year"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_film_name" />

    <TextView
        android:id="@+id/tv_film_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:layout_marginTop="12dp"
        android:alpha=".7"
        android:background="@android:color/darker_gray"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="4dp"
        android:text="@string/text_movie"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_film_year" />

</androidx.constraintlayout.widget.ConstraintLayout>