<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_container"
    android:layout_width="@dimen/movie_item_width"
    android:layout_height="@dimen/movie_item_height"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_image_height"
        android:contentDescription="@string/movie_image_description"
        android:scaleType="centerCrop"
        tools:src="@drawable/movie" />

    <TextView
        android:id="@+id/tv_film_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".7"
        android:background="@android:color/darker_gray"
        android:backgroundTint="@android:color/darker_gray"
        android:padding="3dp"
        android:text="@string/text_movie"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:layout_height="35dp">

    <TextView
        android:id="@+id/tv_film_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/detail_item_margin"
        android:textColor="@android:color/black"
        android:text="@string/year" />

    <TextView
        android:id="@+id/tv_film_rating"
        android:text="8.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detail_item_margin"
        android:layout_marginHorizontal="@dimen/detail_item_margin"
        android:paddingHorizontal="@dimen/detail_item_small_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
         />

    <ImageView
        android:id="@+id/iv_favorite"
        android:src="@android:drawable/star_on"
        android:layout_width="22dp"
        android:layout_height="22dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_film_rating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/movie_image_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>